# MedicalExplAIner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: push_dockerfile.yml
medicalexplainer/: __init__.py  __main__.py  dataset.py  evaluator.py  evaluator_gpt5_nano.py  evaluator_gpt_batch.py  llm.py  logger.py  paths.py  scraper.py
medicalexplainer/data/: test.final.json
tests/: conftest.py  test_dataset.py  test_evaluator.py  test_llm.py  test_logger.py  test_scraper.py
