[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicalexplainer"
version = "0.1.0"
description = "Using LLMs to analyze medical questions by decomposing queries in manageable steps."
authors = [
    { name = "Hossam", email = "hossam@correo.ugr.es" }
]
dependencies = [
    "langchain",
    "langchain_google_genai",
    "langchain_community",
    "langchain_core",
    "langchain-ollama",
    "chromadb",
    "numexpr",
    "pandas",
    "plotly",
    "kaleido",
    "openai",
    "python-dotenv",
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.distutils.egg_info]
egg_base = "/tmp"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
# Only include the medicalexplainer package; exclude data/ and tests/
include = ["medicalexplainer*"]

[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]
