[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicalexplainer"
version = "0.2.0"
description = "Predict ESI triage acuity (1-5) using LLMs on MIMIC-IV-ED data."
authors = [
    { name = "Hossam", email = "hossam@correo.ugr.es" }
]
dependencies = [
    "langchain",
    "langchain_google_genai",
    "langchain_core",
    "langchain-ollama",
    "pandas",
    "python-dotenv",
    "requests",
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.distutils.egg_info]
egg_base = "/tmp"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["medicalexplainer*"]
